<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructure.MetalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pop1"
            style="@style/ArtistStyle"
            android:text="@string/artist_1" />

        <TextView
            android:id="@+id/pop2"
            style="@style/ArtistStyle"
            android:text="@string/artist_2" />

        <TextView
            style="@style/ArtistDetail"
            android:text="@string/artist_detail" />
    </LinearLayout>
</ScrollView>
